# AsconEncryptorComponent

./: benchmark.csv  project.cmake
AsconDeployment/Top/: instances.fpp  topology.fpp
Components/: CMakeLists.txt
Components/AsconEncryptor/: AsconEncryptor.cpp  AsconEncryptor.fpp  AsconEncryptor.hpp
Components/WifiHandler/: CMakeLists.txt  WifiHandler.cpp  WifiHandler.fpp  WifiHandler.hpp
Components/WifiHandler/docs/: sdd.md
Components/WifiReceiver/: CMakeLists.txt  WifiReceiver.cpp  WifiReceiver.fpp  WifiReceiver.hpp
Components/WifiReceiver/docs/: sdd.md
KeyExchange/: Key_Exch_UAV.py  Key_Exch_UGV.py  chirper.py  dc_rx.py
KeyExchange/kevenv/: pyvenv.cfg
KeyExchange/keys/: ec_private.pem  ec_public.pem  rsa_private.pem  rsa_public.pem
lib/ASCON/: aead.c
